10409
Something like "type parameters are not allowed here" or "type parameter can't be checked due to type erasure". This error message is also ugly:

{code}
scala> List(1) match {case x @ List[String](1) =>}
<console>:8: error: List[String] does not take parameters
              List(1) match {case x @ List[String]("") =>}
                                                  ^
{code}
